Add assets photos and fix image paths

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <div class="hero-inner">
       <div class="cake">🎂</div>
       <h1 class="headline"><span>HAPPY 21ST</span></h1>
-      <h2 class="name">ADRIANA! <span class="pumpkin">🎃</span></h2>
-      <p class="tag">The goofy, funny, kind queen turns 21! 👻✨</p>
-      <div class="emoji-row">🕷️🦇🧙‍♀️👻🎃🍹</div>
+      <h2 class="name">ADRIANITA! <span class="pumpkin">🎃</span></h2>
+      <p class="tag">The funniest, kindest, most chaotic queen turns 21!!!! 🎃💫👻✨</p>
+      <div class="emoji-row">🕷️🦇👻🎃🍹</div>
     </div>
   </header>
 
@@ -85,18 +85,132 @@
       </div>
     </section>
 
-    <!-- Mystic Fortune -->
-    <section id="fortune" class="section fortune">
-      <h3 class="section-title">🔮 Your Mystic Fortune</h3>
-      <div class="fortune-box">
-        <div class="fortune-top">🃏</div>
-        <h4>The Year Ahead</h4>
-        <p>
-          The cards reveal transformation, adventure, and pure magic. Expect late night adventures, spontaneous road trips, and friendships that glow brighter than jack-o-lanterns. Trust your intuition and embrace the chaos.
-        </p>
-        <p class="lucky"><b>Lucky Numbers:</b> 21, 10, 7 • <b>Lucky Color:</b> Pumpkin Orange 🎃</p>
+    <!-- Cocktail Menu -->
+<section id="cocktails" class="section barlist">
+  <h3 class="section-title">🍸 The Potion Menu 🍸</h3>
+  <p class="section-sub">Drinks to try now that you’re officially 21!</p>
+
+  <div class="cocktail-grid">
+    <div class="cocktail-card">
+      <h4>Moscow Mule</h4>
+      <p>Vodka + ginger beer + lime juice — crisp, classic, and always a safe starter.</p>
+    </div>
+    <div class="cocktail-card">
+      <h4>Tequila Sunrise</h4>
+      <p>Orange juice, grenadine, and tequila layered like a sunset — tastes like vacation.</p>
+    </div>
+    <div class="cocktail-card">
+      <h4>Espresso Martini</h4>
+      <p>Vodka, espresso, coffee liqueur — for the nights you need to stay cute *and* awake.</p>
+    </div>
+    <div class="cocktail-card">
+      <h4>Mojito</h4>
+      <p>Rum, mint, sugar, lime, soda — refreshing and friendly, like you at pregame.</p>
+    </div>
+    <div class="cocktail-card">
+      <h4>Whiskey Sour</h4>
+      <p>Whiskey, lemon, sugar — sweet, sour, and grown-up but still fun.</p>
+    </div>
+    <div class="cocktail-card">
+      <h4>Aperol Spritz</h4>
+      <p>Prosecco, Aperol, soda water — bubbly, orange, and totally Instagram material.</p>
+    </div>
+
+    <div class="cocktail-card">
+      <h4>Cosmopolitan</h4>
+      <p>Vodka, cranberry, lime — the iconic “Sex and the City” cocktail, perfect for your 21st cheers.</p>
+    </div>
+
+    <div class="cocktail-card">
+      <h4>Margarita</h4>
+      <p>Tequila, lime, triple sec — frozen, spicy, or classic. The best choice when you want instant party vibes.</p>
+    </div>
+
+    <div class="cocktail-card">
+      <h4>Bellini</h4>
+      <p>Peach purée and Prosecco — light, sweet, and brunch-perfect. It’s giving birthday brunch energy.</p>
+    </div>
+
+    <div class="cocktail-card">
+      <h4>Adriana’s Pick</h4>
+      <p>Ask the bartender for their favorite — bonus points if it comes with sparkles ✨</p>
+    </div>
+  </div>
+</section>
+
+<!-- Bar Crawl -->
+<section id="barcrawl" class="section barcrawl">
+  <h3 class="section-title">🍹 The Chicago Birthday Bar Crawl 🍹</h3>
+  <p class="section-sub">The ultimate mix of classy, chaotic, and unforgettable 🎉</p>
+
+  <div class="crawl-list">
+    <div class="crawl-item">
+      <span class="stop">1️⃣</span>
+      <div class="crawl-info">
+        <h4>Joys District (River North)</h4>
+        <p>Start your night on the rooftop! Great music, cocktails, and the perfect golden-hour photo spot to kick off 21.</p>
       </div>
-    </section>
+    </div>
+    <div class="crawl-item">
+      <span class="stop">2️⃣</span>
+      <div class="crawl-info">
+        <h4>Celeste Chicago</h4>
+        <p>Four floors of pure vibe — start elegant, end on the rooftop under string lights. The birthday glam stop. ✨</p>
+      </div>
+    </div>
+    <div class="crawl-item">
+      <span class="stop">3️⃣</span>
+      <div class="crawl-info">
+        <h4>Howl at the Moon</h4>
+        <p>Live dueling pianos, high-energy crowd, and drinks served in buckets. This is where the chaos begins. 🪩</p>
+      </div>
+    </div>
+    <div class="crawl-item">
+      <span class="stop">4️⃣</span>
+      <div class="crawl-info">
+        <h4>Federales (West Loop)</h4>
+        <p>Open-air tequila bar with ice shot glasses you can throw at a bell. Fun, loud, and perfect for birthday photos.</p>
+      </div>
+    </div>
+    <div class="crawl-item">
+      <span class="stop">5️⃣</span>
+      <div class="crawl-info">
+        <h4>Bar Siena (West Loop)</h4>
+        <p>Wind down with late-night bites and cocktails — classy but still buzzing. Great place to end the crawl. 🍕🍸</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+    <!-- Mystic Fortune -->
+<section id="fortune" class="section fortune">
+  <h3 class="section-title">🔮 Adriana’s Mystic Fortune 🔮</h3>
+  <div class="fortune-box">
+    <div class="fortune-top">♎️</div>
+    <h4>The Libra Glow-Up</h4>
+    <p>
+      Born under the sign of charm and chaos, you naturally attract laughter,
+      late-night talks, and people who feel like home. This next trip around the
+      sun brings new adventures, confidence, and a few dramatic stories you'll
+      laugh about later.
+    </p>
+    <p>
+      Friendships will deepen, love will surprise you when you’re not looking,
+      and career or school wins will start stacking up once you trust your gut.
+      Remember: balance is your superpower. Use it to keep calm while everyone
+      else spirals.
+    </p>
+    <p class="lucky">
+      <b>Lucky Numbers:</b> 7 • 10 • 21  
+      <br />
+      <b>Lucky Colors:</b> Rose gold ✨ and lilac 💜  
+      <br />
+      <b>Cosmic Advice:</b> Take the picture, drink the spritz, and stop doubting your magic.
+    </p>
+  </div>
+</section>
 
     <!-- Playlist -->
     <section id="playlist" class="section teal">
@@ -106,7 +220,7 @@
         <!-- Replace the src with your Spotify embed link -->
         <iframe
           title="Spotify"
-          src="https://open.spotify.com/embed/playlist/37i9dQZF1DX3ND264N08pv"
+          src="https://open.spotify.com/embed/album/4YF2FhoRfaTLv2sMVLUrJm"
           width="100%" height="380" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
         </iframe>
       </div>
